--- a/Client/src/Components/Form/Login/Style.css
+++ b/Client/src/Components/Form/Login/Style.css
@@ -4,6 +4,7 @@
     justify-content: center;
     align-items: center;
     font-weight: bold;
+    
 }
 
 .form-container{
@@ -13,7 +14,7 @@
     border-radius: 9px;
 }
 
-input[type=email], input[type=password] {
+input[type=email], input[type=password], input[type=text], #age {
     width: 100%;
     padding: 5px 2px; 
     border-radius: 6px;  
@@ -38,4 +39,15 @@ button {
     display: flex;
     gap: 10px; /* Space between buttons */
     margin-top: 10px;
+}
+
+#signUp{
+    width: 50%;
+}
+
+#leftArrow{
+    width: 20px;
+    height: 20px;
+
+    cursor: pointer;
 }
